--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'Carlito', sans-serif;
-    height: 3000px;
+    
 }
 
 /* navbar */
@@ -207,4 +207,107 @@ header {
     text-align: center;
     padding:  15px 0 ;
 }
+/* section6 */
+.sec-6{
+    width: 100%;
+    height: 400px;
+    margin-top: 50px;
+}
+.btn3{
+    display: flex;
+    justify-content: center;
+}
+.btn3 button{
+   background-color: rgb(65, 67, 83);
+   color: white; 
+   width: 270px;
+    height: 75px;
+    border-style: none;
+    font-size: 40px;
+   margin-top: 40px;
+}
+.envol{
+    width: 30%;
+   display: flex;
+   justify-content: center;
+}
+.texto4{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.texto4 p{
+    width: 490px;
+    font-size: 19px;
+}
+.mother-envol{
+    display: flex;
 
+}
+/* section7 */
+.sec-7{
+    background-color: beige;
+    width: 100%;
+    height: 230px;
+
+}
+.logo-sec7{
+    display: flex;
+    justify-content: space-evenly;
+   
+}
+.logo-sec7 img{
+    width:100px;
+    margin-top: 42px;
+}
+.logo-sec7 p{
+    text-align: center;
+    padding:  15px 0 ;
+}
+/* footer */
+footer{
+    width: 100%;
+    height: 250px;
+    background-color: rgb(44, 42, 42);
+}
+.ft-txt{
+    display: flex;
+    justify-content: space-around;
+    
+
+}
+.ft-txt h1{
+    color: white;
+    padding:45px 0;
+}
+.all-icones{
+    display: flex;
+}
+.icone-footer1{
+    width: 33vw;
+    display: flex;
+    justify-content: center;
+}
+.icone-footer1 img{
+    width: 60px;
+    padding: 0 12px ;
+}
+.icone-footer2{
+    width: 33vw;
+    display: flex;
+    justify-content: center;
+}
+.icone-footer2 img{
+    width: 60px;
+    padding: 0 12px ;
+}
+.icone-footer3{
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+}
+.icone-footer3 img{
+    width: 60px;
+    padding: 0 12px ;
+}
